# trovis-modbus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
script/: format.sh  libcheck.sh  libtest.sh  query.py
src/trovis_modbus/: __init__.py  addresses.py  catalog.py  clock.py  component.py  components.py  controller.py  derived.py  device_info.py  domestic_hot_water.py  enum_options.py  enums.py  exceptions.py  fields.py  heating_circuit.py  hot_water.py  metadata.py  model.py  options.py  ranges.py  sensors.py  trovis.py  utils.py
src/trovis_modbus/hydronic_configs/: __init__.py  anlage_1.py  anlage_10.py  anlage_11.py  anlage_12.py  anlage_13.py  anlage_14.py  anlage_15.py  anlage_16.py  anlage_17.py  anlage_18.py  anlage_19.py  anlage_2.py  anlage_20.py  anlage_21.py  anlage_25.py  anlage_27.py  anlage_3.py  anlage_4.py  anlage_5.py  anlage_6.py  anlage_7.py  anlage_8.py  anlage_9.py  definitions.py  registry.py
src/trovis_modbus/models/: __init__.py  definitions.py  registry.py  trovis_5573.py  trovis_5573_1.py  trovis_5575.py  trovis_5576.py  trovis_5578.py  trovis_5578_e.py  trovis_5579.py
src/trovis_modbus/subsystems/: __init__.py  controller.py  date_time.py  domestic_hot_water.py  heating_circuit.py  meters.py  sensors.py
tests/: conftest.py  test_canonical_parity.py  test_device.py  test_enum_options.py  test_hydronic_configs.py  test_metadata_ranges.py  test_models.py  test_operating_mode_write.py  test_operational_datapoints.py  test_query_cli.py  test_register_fields.py  test_temporal_values.py  test_yaml_parity.py
