[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trovis-modbus"
version = "0.1.0"
description = "Read a Samson Trovis 557x heating controller over Modbus."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Trovis Modbus contributors" }]
keywords = ["modbus", "trovis", "samson", "heating", "home-assistant"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Home Automation",
]
# Protocol only — no Modbus backend is hard-depended on. The caller injects a
# ModbusUnit built from whichever backend they choose.
dependencies = ["modbus-connection>=0.1"]

[project.urls]
Homepage = "https://github.com/balloob/trovis-modbus"

[tool.uv.sources]
modbus-connection = { path = "../modbus-connection", editable = true }

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pyyaml>=6",
    # A concrete backend + a server, to exercise the library end-to-end.
    "modbus-connection[pymodbus]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/trovis_modbus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
src = ["src"]
